Fixed markdown image align

--- a/core-client/scss/components/markdown-content.scss
+++ b/core-client/scss/components/markdown-content.scss
@@ -264,8 +264,13 @@
 
 	}
 
-	img.right {
+	.align-right {
 		float:right;
+    margin: 0 0 10px 10px;
+    max-width: 30vw;
+	}
+  .align-center {
+		text-align: center;
 	}
 
 	img.pagelogo {
